--- a/src/main/webapp/app/account/settings/settings.component.html
+++ b/src/main/webapp/app/account/settings/settings.component.html
@@ -86,8 +86,45 @@
                         <option *ngFor="let language of languages" [value]="language">{{language | findLanguageFromKey}}</option>
                     </select>
                 </div>
-                <button type="submit" [disabled]="settingsForm.invalid" class="btn btn-primary" jhiTranslate="settings.form.button">Save</button>
+<!--                <button type="submit" [disabled]="settingsForm.invalid" class="btn btn-primary" jhiTranslate="settings.form.button">Save</button>-->
             </form>
+
+            <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="extraForm">
+                <div>
+                    <jhi-alert-error></jhi-alert-error>
+                    <!--                <div class="form-group" [hidden]="!editForm.get('id').value">
+                                        <label for="id" jhiTranslate="global.field.id">ID</label>
+                                        <input type="text" class="form-control" id="id" name="id" formControlName="id"
+                                            readonly />
+                                    </div>-->
+                    <div class="form-group">
+                        <label class="form-control-label" jhiTranslate="soundgramApp.userExtra.userLocation" for="field_userLocation">User Location</label>
+                        <input type="text" class="form-control" name="userLocation" id="field_userLocation"
+                               formControlName="userLocation"/>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-control-label" jhiTranslate="soundgramApp.userExtra.bio" for="field_bio">Bio</label>
+                        <input type="text" class="form-control" name="bio" id="field_bio"
+                               formControlName="bio"/>
+                    </div>
+
+                    <!--                <div class="form-group">
+                                        <label class="form-control-label" jhiTranslate="soundgramApp.userExtra.user" for="field_user">User</label>
+                                        <select class="form-control" id="field_user" name="user" formControlName="user">
+                                            <option [ngValue]="null"></option>
+                                            <option [ngValue]="userOption.id === editForm.get('user').value?.id ? editForm.get('user').value : userOption" *ngFor="let userOption of users; trackBy: trackUserById">{{userOption.login}}</option>
+                                        </select>
+                                    </div>-->
+                </div>
+            </form>
+            <div>
+                <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
+                    <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
+                </button>
+                <button type="button" id="save-entity" [disabled]="extraForm.invalid || settingsForm.invalid" class="btn btn-primary" (click)="save()">
+                    <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
+                </button>
+            </div>
         </div>
     </div>
 
