--- a/src/main/webapp/app/entities/user-extra/user-extra-update.component.html
+++ b/src/main/webapp/app/entities/user-extra/user-extra-update.component.html
@@ -1,14 +1,14 @@
 <div class="row justify-content-center">
     <div class="col-8">
         <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-            <h2 id="jhi-user-extra-heading" jhiTranslate="soundgramApp.userExtra.home.createOrEditLabel">Create or edit a User Extra</h2>
+            <h2 id="jhi-user-extra-heading">Edit your extra data</h2> <!--jhiTranslate="soundgramApp.userExtra.home.createOrEditLabel"-->
             <div>
                 <jhi-alert-error></jhi-alert-error>
-                <div class="form-group" [hidden]="!editForm.get('id').value">
+<!--                <div class="form-group" [hidden]="!editForm.get('id').value">
                     <label for="id" jhiTranslate="global.field.id">ID</label>
                     <input type="text" class="form-control" id="id" name="id" formControlName="id"
                         readonly />
-                </div>
+                </div>-->
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="soundgramApp.userExtra.userLocation" for="field_userLocation">User Location</label>
                     <input type="text" class="form-control" name="userLocation" id="field_userLocation"
@@ -20,13 +20,13 @@
                            formControlName="bio"/>
                 </div>
 
-                <div class="form-group">
+<!--                <div class="form-group">
                     <label class="form-control-label" jhiTranslate="soundgramApp.userExtra.user" for="field_user">User</label>
                     <select class="form-control" id="field_user" name="user" formControlName="user">
                         <option [ngValue]="null"></option>
                         <option [ngValue]="userOption.id === editForm.get('user').value?.id ? editForm.get('user').value : userOption" *ngFor="let userOption of users; trackBy: trackUserById">{{userOption.login}}</option>
                     </select>
-                </div>
+                </div>-->
             </div>
             <div>
                 <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
