--- a/src/main/webapp/app/profile/profile.component.html
+++ b/src/main/webapp/app/profile/profile.component.html
@@ -12,7 +12,7 @@
         </h2>
 
             <h2>
-                <span jhiTranslate="userManagement.detail.title">User</span> [<b>{{user?.login}}</b>]  <img id="avatar" class="profile-image rounded-circle"/>
+                <span jhiTranslate="userManagement.detail.title">User</span> [<b>{{user?.login}}</b>]  <img id="avatar" class="profile-image rounded-circle" style="max-width:80px;width:100%;max-height:80px;height:100%"/>
             </h2>
             <dl class="row-md jh-entity-details">
                 <dt><span jhiTranslate="userManagement.login">Login</span></dt>
