--- a/src/main/webapp/app/entities/audio-file/audio-file-detail.component.html
+++ b/src/main/webapp/app/entities/audio-file/audio-file-detail.component.html
@@ -26,7 +26,7 @@
                 <dt><span jhiTranslate="soundgramApp.audioFile.user">User</span></dt>
                 <dd>
                     <span *ngFor="let user of audioFile.users; let last = last">
-                        {{user.login}}{{last ? '' : ', '}}
+                        <a [routerLink]="['/', user.login, 'view']">{{user.login}}{{last ? '' : ', '}}</a>
                     </span>
                 </dd>
             </dl>
