--- a/src/main/webapp/app/users/users.component.html
+++ b/src/main/webapp/app/users/users.component.html
@@ -1,16 +1,3 @@
-<!--
-<div class="row">
-  <div class="col-md-1"></div>
-  <div class="col-md-10">
-    <h6 class="text-right">{{message}}</h6>
-    <h1 class="text-capitalize text-center" jhiTranslate="users.title">Title</h1>
-    <h5 class="text-center" jhiTranslate="users.subtitle">Subtitle</h5>
-    <hr/>
-    <p class="text-justify" jhiTranslate="users.content">Content</p>
-  </div>
-  <div class="col-md-1"></div>
-</div>-->
-
 <div [ngSwitch]="allUsersDisplayed">
     <h2 *ngSwitchCase="true">
         <span id="users-page-heading" jhiTranslate="users.allUsers">All Users</span>
@@ -60,7 +47,7 @@
                 <td>{{user.email}}</td>
                 <td>{{user.langKey}}</td>
                 <td>{{user.createdDate | date:'dd/MM/yy HH:mm'}}</td>
-                <td>{{user.lastModifiedBy}}</td>
+                <td><a [routerLink]="['/', user.login, 'view']">{{user.lastModifiedBy}}</a></td>
                 <td class="text-right">
                     <div class="btn-group">
                         <button type="submit"
