--- a/src/main/webapp/app/users/user-detail/user-detail.component.html
+++ b/src/main/webapp/app/users/user-detail/user-detail.component.html
@@ -1,7 +1,13 @@
 <div class="row justify-content-center">
     <div class="col-8">
         <h2>
-            <span jhiTranslate="userManagement.detail.title">User</span> [<b>{{user?.login}}</b>]  <img id="avatar" class="profile-image rounded-circle" style="max-width:80px;width:100%;max-height:80px;height:100%"/>
+            <span jhiTranslate="userManagement.detail.title">User</span> [<b>{{user?.login}}</b>]
+            <img [src]="avatar"
+                 alt="Place image title"
+                 *ngIf="!isImageLoading && hasImage; else noImageFound" class="profile-image rounded-circle" style="max-width:80px;width:100%;max-height:80px;height:100%">
+            <ng-template #noImageFound>
+                <span>No avatar found!</span>
+            </ng-template>
         </h2>
         <dl class="row-md jh-entity-details">
             <dt><span jhiTranslate="userManagement.login">Login</span></dt>
