--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -70,6 +70,7 @@
                 <div class="alert alert-warning" *ngIf="posts?.length === 0">
                     <span jhiTranslate="soundgramApp.post.home.notFound">No posts found</span>
                 </div>
+
                 <div class="table-responsive" *ngIf="posts?.length > 0">
                     <table class="table table-striped" aria-describedby="page-heading">
                         <thead>
@@ -118,6 +119,104 @@
                         </tbody>
                     </table>
                 </div>
+
+                <div class="col text-center">
+                    <div class="landing-panel mx-auto">
+                        <h3 class="section-title">Sign-Up</h3>
+                        <h3>Name</h3>
+                        <input type="text" maxlength="40" />
+
+                        <div role="alert">
+                            <span class="error" >
+                            Not valid Username! <br/>Use: 0-9a-zA-Z_.- </span>
+                        </div>
+
+                        <h3>Email</h3>
+                        <input type="email"  required/>
+
+                        <div role="alert">
+                            <span class="error" >
+                            Not valid email!</span>
+                        </div>
+
+                        <h3>Password</h3>
+                        <input type="password" /> <br>
+
+                        <div role="alert">
+                            <span class="error" >
+                            Not valid password! <br/>Use: 6>chars, 1digit </span>
+                        </div>
+
+                        <button class="cta-button" ng-click="createUser(newUser)">Create account</button>
+                    </div>
+                </div>
+
+                <section class="hero">
+                    <div class="container">
+                        <div class="row">
+
+                            <div class="col-lg-6 offset-lg-3">
+
+                                <div class="cardbox shadow-lg bg-white">
+
+                                    <div class="cardbox-heading">
+                                        <!-- START dropdown-->
+<!--                                        <div class="dropdown float-right">-->
+<!--                                            <button class="btn btn-flat btn-flat-icon" type="button" data-toggle="dropdown" aria-expanded="false">-->
+<!--                                                <em class="fa fa-ellipsis-h"></em>-->
+<!--                                            </button>-->
+<!--                                            <div class="dropdown-menu dropdown-scale dropdown-menu-right" role="menu" style="position: absolute; transform: translate3d(-136px, 28px, 0px); top: 0px; left: 0px; will-change: transform;">-->
+<!--                                                <a class="dropdown-item" href="#">Hide post</a>-->
+<!--                                                <a class="dropdown-item" href="#">Stop following</a>-->
+<!--                                                <a class="dropdown-item" href="#">Report</a>-->
+<!--                                            </div>-->
+<!--                                        </div>&lt;!&ndash;/ dropdown &ndash;&gt;-->
+                                        <div class="media m-0">
+                                            <div class="d-flex mr-3">
+                                                <a href=""><img class="img-fluid rounded-circle" src="http://www.themashabrand.com/templates/bootsnipp/post/assets/img/users/4.jpg" alt="User"></a>
+                                            </div>
+                                            <div class="media-body">
+                                                <p class="m-0">Benjamin Robinson</p>
+                                                <small><span><i class="icon ion-md-pin"></i> Nairobi, Kenya</span></small>
+                                                <small><span><i class="icon ion-md-time"></i> 10 hours ago</span></small>
+                                            </div>
+                                        </div><!--/ media -->
+                                    </div><!--/ cardbox-heading -->
+
+                                    <div class="cardbox-item">
+                                        <img class="img-fluid" src="http://www.themashabrand.com/templates/bootsnipp/post/assets/img/1.jpg" alt="Image">
+                                    </div><!--/ cardbox-item -->
+                                    <div class="cardbox-base">
+                                        <ul class="float-right">
+                                            <li><a><i class="fa fa-comments"></i></a></li>
+                                            <li><a><em class="mr-5">12</em></a></li>
+                                            <li><a><i class="fa fa-share-alt"></i></a></li>
+                                            <li><a><em class="mr-3">03</em></a></li>
+                                        </ul>
+                                        <ul>
+                                            <li><a><i class="fa fa-thumbs-up"></i></a></li>
+                                            <li><a href="#"><img src="http://www.themashabrand.com/templates/bootsnipp/post/assets/img/users/3.jpeg" class="img-fluid rounded-circle" alt="User"></a></li>
+                                            <li><a href="#"><img src="http://www.themashabrand.com/templates/bootsnipp/post/assets/img/users/1.jpg" class="img-fluid rounded-circle" alt="User"></a></li>
+                                            <li><a href="#"><img src="http://www.themashabrand.com/templates/bootsnipp/post/assets/img/users/5.jpg" class="img-fluid rounded-circle" alt="User"></a></li>
+                                            <li><a href="#"><img src="http://www.themashabrand.com/templates/bootsnipp/post/assets/img/users/2.jpg" class="img-fluid rounded-circle" alt="User"></a></li>
+                                            <li><a><span>242 Likes</span></a></li>
+                                        </ul>
+                                    </div><!--/ cardbox-base -->
+                                    <div class="cardbox-comments">
+			  <span class="comment-avatar float-left">
+			   <a href=""><img class="rounded-circle" src="http://www.themashabrand.com/templates/bootsnipp/post/assets/img/users/6.jpg" alt="..."></a>
+			  </span>
+                                        <div class="search">
+                                            <input placeholder="Write a comment" type="text">
+                                            <button><i class="fa fa-camera"></i></button>
+                                        </div><!--/. Search -->
+                                    </div><!--/ cardbox-like -->
+
+                                </div><!--/ cardbox -->
+
+                        </div><!--/ row -->
+                    </div><!--/ container -->
+                </section>
 
             </div>
 
