--- a/src/main/webapp/app/home/home.scss
+++ b/src/main/webapp/app/home/home.scss
@@ -37,263 +37,82 @@ Main page styles
 * ===========================================================
 *
 */
-.hero {
-  padding: 6.25rem 0px !important;
-  margin: 0px !important;
-}
-.cardbox {
-  border-radius: 3px;
-  margin-bottom: 20px;
-  padding: 0px !important;
-}
 
-/* ------------------------------- */
-/* Cardbox Heading
----------------------------------- */
-.cardbox .cardbox-heading {
-  padding: 16px;
-  margin: 0;
+//body {
+//  background:#eee;
+//}
+.posts-content {
+  margin-top: 20px;
 }
-.cardbox .btn-flat.btn-flat-icon {
-  border-radius: 50%;
-  font-size: 24px;
-  height: 32px;
-  width: 32px;
-  padding: 0;
-  overflow: hidden;
-  color: #fff !important;
-  background: #b5b6b6;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+.default-style .ui-bordered {
+  border: 1px solid rgba(24, 28, 33, 0.06);
 }
-.cardbox .float-right .dropdown-menu {
-  position: relative;
-  left: 13px !important;
-}
-.cardbox .float-right a:hover {
-  background: #f4f4f4 !important;
-}
-.cardbox .float-right a.dropdown-item {
-  display: block;
-  width: 100%;
-  padding: 4px 0px 4px 10px;
-  clear: both;
-  font-weight: 400;
-  font-family: 'Abhaya Libre', serif;
-  font-size: 14px !important;
-  color: #848484;
-  text-align: inherit;
-  white-space: nowrap;
-  background: 0 0;
-  border: 0;
-}
-
-/* ------------------------------- */
-/* Media Section
----------------------------------- */
-.media {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-align: start;
-  align-items: flex-start;
-}
-.d-flex {
-  display: -ms-flexbox !important;
-  display: flex !important;
-}
-.media .mr-3 {
-  margin-right: 1rem !important;
-}
-.media img {
-  width: 48px !important;
-  height: 48px !important;
-  padding: 2px;
-  border: 2px solid #f4f4f4;
-}
-.media-body {
-  -ms-flex: 1;
-  flex: 1;
-  padding: 0.4rem !important;
-}
-.media-body p {
-  font-family: 'Rokkitt', serif;
-  font-weight: 500 !important;
-  font-size: 14px;
-  color: #88898a;
-}
-.media-body small span {
-  font-family: 'Rokkitt', serif;
-  font-size: 12px;
-  color: #aaa;
-  margin-right: 10px;
-}
-
-/* ------------------------------- */
-/* Cardbox Item
----------------------------------- */
-.cardbox .cardbox-item {
-  position: relative;
-  display: block;
-}
-.cardbox .cardbox-item img {
-}
-.img-responsive {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-.fw {
-  width: 100% !important;
-  height: auto;
-}
-
-/* ------------------------------- */
-/* Cardbox Base
----------------------------------- */
-.cardbox-base {
-  border-bottom: 2px solid #f4f4f4;
-}
-.cardbox-base ul {
-  margin: 10px 0px 10px 15px !important;
-  padding: 10px !important;
-  font-size: 0px;
-  display: inline-block;
-}
-.cardbox-base li {
-  list-style: none;
-  margin: 0px 0px 0px -8px !important;
-  padding: 0px 0px 0px 0px !important;
-  display: inline-block;
-}
-
-.cardbox-base li a {
-  margin: 0px !important;
-  padding: 0px !important;
-}
-.cardbox-base li a i {
-  position: relative;
-  top: 4px;
-  font-size: 16px;
-  color: #8d8d8d;
-  margin-right: 15px;
-}
-.cardbox-base li a span {
-  font-family: 'Rokkitt', serif;
-  font-size: 14px;
-  color: #8d8d8d;
-  margin-left: 20px;
-  position: relative;
-  top: 5px;
-}
-.cardbox-base li a em {
-  font-family: 'Rokkitt', serif;
-  font-size: 14px;
-  color: #8d8d8d;
-  position: relative;
-  top: 3px;
-}
-.cardbox-base li a img {
-  width: 25px;
-  height: 25px;
-  margin: 0px !important;
-  border: 2px solid #fff;
-}
-
-/* ------------------------------- */
-/* Cardbox Comments
----------------------------------- */
-.cardbox-comments {
-  padding: 10px 40px 20px 40px !important;
-  font-size: 0px;
-  text-align: center;
-  display: inline-block;
-}
-.cardbox-comments .comment-avatar img {
-  margin-top: 1px;
-  margin-right: 10px;
-  position: relative;
-  display: inline-block;
-  text-align: center;
-  width: 40px;
-  height: 40px;
-}
-.cardbox-comments .comment-body {
-  overflow: auto;
-}
-.search {
-  position: relative;
-  right: -60px;
-  top: -40px;
-  margin-bottom: -40px;
-  border: 2px solid #f4f4f4;
-  width: 100%;
-  overflow: hidden;
-}
-.search input[type='text'] {
-  background-color: #fff;
-  line-height: 10px;
-  padding: 15px 60px 20px 10px;
-  border: none;
-  border-radius: 4px;
-  width: 350px;
-  font-family: 'Rokkitt', serif;
-  font-size: 14px;
-  color: #8d8d8d;
-  height: inherit;
-  font-weight: 700;
-}
-.search button {
-  position: absolute;
-  right: 0;
-  top: 0px;
-  border: none;
+.ui-bg-cover {
   background-color: transparent;
-  color: #bbbbbb;
-  padding: 15px 25px;
-  cursor: pointer;
+  background-position: center center;
+  background-size: cover;
+}
+.ui-rect {
+  padding-top: 50% !important;
+}
+.ui-rect,
+.ui-rect-30,
+.ui-rect-60,
+.ui-rect-67,
+.ui-rect-75 {
+  position: relative !important;
+  display: block !important;
+  padding-top: 100% !important;
+  width: 100% !important;
+  margin: auto;
+}
+//.d-flex, .d-inline-flex, .media, .media>:not(.media-body), .jumbotron, .card {
+//  -ms-flex-negative: 1;
+//  flex-shrink: 1;
+//}
+//.bg-dark {
+//  background-color: rgba(24,28,33,0.9) !important;
+//}
+.card-footer,
+.card hr {
+  border-color: rgba(24, 28, 33, 0.06);
+}
+//.ui-rect-content {
+//  position: absolute !important;
+//  top: 0 !important;
+//  right: 0 !important;
+//  bottom: 0 !important;
+//  left: 0 !important;
+//}
+.default-style .ui-bordered {
+  border: 1px solid rgba(24, 28, 33, 0.06);
+}
 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-.search button i {
-  font-size: 20px;
-  line-height: 30px;
-  display: block;
+.list-group {
+  max-height: 200px;
+  margin-bottom: 10px;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
-/* ------------------------------- */
-/* Author
----------------------------------- */
-.author a {
-  font-family: 'Rokkitt', serif;
-  font-size: 16px;
-  color: #00c4cf;
-}
-.author p {
-  font-family: 'Rokkitt', serif;
-  font-size: 16px;
-  color: #8d8d8d;
+.ui-w-60 {
+  width: 60px !important;
+  height: auto;
 }
 
-.landing-panel {
+.card {
   border-radius: 10px;
-  border: 1px solid #fff;
-  background-color: #ff831c;
-  max-width: 300px;
+  border: 2px solid #522b72;
+  background-color: #ffffff;
+  max-width: 600px;
   min-height: 200px;
   padding-bottom: 20px;
-  padding-top: 20px;
+  padding-top: 10px;
   padding-left: 10px;
   padding-right: 10px;
-  color: #fff;
-  margin-top: 20px;
+  color: #000000;
+  // margin-top: 20px;
+  margin: auto; // środkowanie
 }
 
 /* wait autoprefixer update to allow simple generation of high pixel density media query */
